Fixing series and series2 spacing

--- a/cps/static/css/style.css
+++ b/cps/static/css/style.css
@@ -783,3 +783,11 @@ select.cwa-settings-select {
   width: -webkit-fill-available;
   justify-content: space-evenly;
 }
+
+.series-section {
+    margin-bottom: 10px;
+}
+
+.series-section p {
+    margin-bottom: 5px;
+}
